--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>I am static website from Main Branch</h1>
-    <h4>changes done by anjali for learning variables</h4>
+    <h4>learning CICD</h4>
   </body>
 </html>
